--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -12,3 +12,341 @@
 @import "partials/page";
 @import "partials/form";
 @import "partials/two_col";
+@import "compass/css3/border-radius";
+@import "compass/css3/box-shadow";
+@import "compass/css3/font-face";
+
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
+@import url(http://fonts.googleapis.com/css?family=Droid+Serif:700italic,400italic);
+@include font-face("Bemio italic", font-files("bemio_italic-webfont.woff","bemio_italic-webfont.ttf","bemio_italic-webfont.otf", "bemio_italic-webfont.svg"), "bemio_italic-webfont.eot", normal, italic);
+
+$blu_shadow: #0B4E6B;
+$blu_bg: #33BBCC;
+$orange_bg: #FF7D08;
+$white_border: #FFF3F6;
+$blu_dark_border: #3886AD;
+$blu_text: #0B4C63;
+$blu_dark_text: #135C7C;
+$blu_light_border: #68D7E0;
+$azzurro_text: #80DADD;
+$grigio_bg: #D7E2DE;
+$grigio_text: #575958;
+$grigio_dark_text: #373A39;
+$orange_text: #E85605;
+$orange_dark_text: #D13B07;
+$azzurro_chiaro_text: #8ADDDD;
+
+
+
+body.bp{
+	
+	-webkit-font-smoothing: antialiased;
+	background-color: $blu_bg;
+
+}
+	#container{
+		@include container;
+	}
+	
+	.row_eventi{
+//	background-color: cyan;
+	width: 740px;
+	margin-top: 15px;
+	}
+		
+	.top_row_eventi{
+		width: 730px;
+		height: 298px;
+//		margin-top: 50px;
+		overflow: hidden;
+		padding-left: 10px;
+		border-bottom: 1px solid $blu_dark_border;
+	}
+
+			.scheda_evento{
+				position: relative;
+				float: left;
+				width: 216px;
+				height: 290px;
+				margin: 10px;
+				@include border-radius(6px, 6px);
+				@include single-box-shadow(rgba(11,78,107,0.5), 1px, 2px, 10px);
+				border: 2px solid $white_border;
+				
+					img{
+						height: 290px;
+						@include border-radius(3px, 3px);
+					}
+					
+			}
+	
+
+			.faccia_scheda_evento{
+						position: absolute;
+						top: -7px;
+						right: -7px;
+						width: 80px;
+						height: 80px;
+						@include border-radius(6px, 6px);
+						@include single-box-shadow(rgba(11,78,107,0.5), 1px, 2px, 10px);
+						border: 2px solid $white_border;
+						
+							img{
+								width: 80px;
+								height: 80px;
+								@include border-radius(4px, 4px);
+							}
+							
+					}
+			
+	.bottom_row_eventi{
+		width: 740px;
+		height: 70px;
+		@include background-image(radial-gradient(50% 0, rgba(121,212,216,0.5), rgba(121,212,216,0) 60%));
+//		background-color: #66c5db;
+		border-top: 1px solid $blu_light_border;
+	}
+	
+		.data_evento{
+			width: 220px;
+			margin-left: 20px;
+			margin-bottom: 30px;
+			float: left;
+		
+			.giorno{
+				font-family: 'Bemio italic';
+				font-size: 55px;
+				color: $azzurro_text;
+				font-style: italic;
+				line-height: 64px;
+				float: left;
+				margin-right: 10px;
+//				background-color: red;
+			}
+			.mese{
+				font-family: 'Bemio italic';
+				font-style: italic;
+				font-size: 24px;
+				color: $azzurro_text;
+				text-transform: capitalize;
+//				background-color: cyan;
+			}
+			.luogo{
+				font-family: 'Bemio italic';
+				font-style: italic;
+				font-size: 18px;
+				color: $white_border;
+				margin-top: -10px;
+			}
+		}
+		
+		
+		
+		
+		
+.blog_side{
+	width: 291px;
+	background-color: $grigio_bg;
+	padding: 43px 0 18px 39px;
+	
+		h1{
+			width: 202px;
+			font-family: 'Bemio italic';
+			font-style: italic;
+			font-size: 35px !important;
+			color: $blu_bg !important;
+			line-height: 35px !important;
+		}
+		
+		h2{
+			width: 202px;
+			font-family: 'Bemio italic';
+			font-style: italic;
+			font-size: 20px !important;
+			color: $white_border !important;
+			margin-top: -15px;
+			margin-bottom: 25px !important;
+		}
+			
+		p{
+			width: 202px;
+			font-family: 'Droid Sans', sans-serif;
+			font-weight: normal;
+			font-size: 13px;
+			color: $grigio_text;
+			line-height: 15px;
+			text-indent: 10px;
+			margin: 0 0 10px !important;
+		}
+		.autore{
+			font-family: 'Droid Serif', serif;
+			font-weight: normal;
+			font-style: italic;
+			text-indent: 0;
+			font-size: 9px;
+			line-height: 11px;
+			color: $grigio_dark_text;
+			margin-top: 28px !important;
+			
+		}
+		.name{
+			font-size: 11px;
+			font-weight: bold;
+			color: $blu_bg;
+			
+		}
+	
+}
+		
+		
+.quote_side{
+	width: 291px;
+	background-color: $orange_bg;
+	padding: 43px 0 18px 39px;
+	
+		.virgolette{
+			float: left;
+			margin-left: -25px;
+			width: auto;
+		}
+		
+		p{
+			width: 202px;
+			font-family: 'Bemio italic';
+			font-style: italic;
+			font-size: 24px;
+			line-height: 29px;
+			color: $orange_text;
+		}
+		
+		.emphasize{
+			color: $orange_dark_text;
+		}
+		
+		.firma {
+			font-family: 'Droid Serif', serif;
+			font-weight: normal;
+			font-style: italic;
+			text-indent: 0;
+			font-size: 9px;
+			line-height: 11px;
+			color: $orange_dark_text;
+			margin-top: 28px !important;
+		}
+		
+		.name_quote{
+			font-size: 11px;
+			font-weight: bold;
+			color: $white_border;
+		}
+}		
+	
+.top_evento_singolo{
+	
+	width: 700px;
+	padding: 0 20px;
+	margin-top: 26px;
+	
+	h1{
+		width: 400px;
+		font-family: 'Bemio italic';
+		font-style: italic;
+		font-size: 48px !important;
+		line-height: 48px !important;
+		color: $white_border !important;
+		margin: 0 0 17px !important;
+		}
+	
+	.intro{
+		width: 400px;
+		font-family: 'Bemio italic';
+		font-style: italic;
+		font-size: 24px;
+		line-height: 29px;
+		color: $blu_dark_text;
+		margin: 0 !important;
+		float: left;
+	}
+	
+	.prezzo{
+		float: right;
+		font-family: 'Bemio italic';
+		font-style: italic;
+		font-size: 60px !important;
+		color: $azzurro_chiaro_text;
+		margin: 0 !important;
+		bottom: 0;
+	
+	}
+}
+	
+		
+.foto{
+
+	width: 740px;
+	height: 337px;
+	border-bottom: 1px solid $blu_light_border;
+	border-top: 1px solid $blu_light_border;
+	margin-top: 26px;
+	margin-bottom: 30px;
+	float: left;
+
+	
+	.gradient_sx{
+		width: 20px;
+		height: 335px;
+		@include background-image(linear-gradient(left, rgba(55,144,204,0), rgba(55,144,204,0.4) 100%));
+		border-bottom: 1px solid $blu_dark_border;
+		border-top: 1px solid $blu_dark_border;
+		float: left;
+	}
+	.gradient_dx{
+		width: 20px;
+		height: 335px;
+		@include background-image(linear-gradient(left, rgba(55,144,204,0.4), rgba(55,144,204,0) 100%));
+		border-bottom: 1px solid $blu_dark_border;
+		border-top: 1px solid $blu_dark_border;
+		float: left;
+	}
+	.img{
+		width: 700px;
+		height: 335px;
+		border-bottom: 1px solid $blu_dark_border;
+		border-top: 1px solid $blu_dark_border;
+		float: left;
+		overflow: hidden;
+	}
+}		
+	
+.description{
+	width: 400px;
+	padding-left: 20px;
+			p{
+				font-family: 'Droid Sans', sans-serif;
+				font-weight: normal;
+				font-size: 13px;
+				color: $blu_text;
+				line-height: 15px;
+				text-indent: 10px;
+				margin: 0 0 10px !important;
+			}
+			.autore{
+				font-family: 'Droid Serif', serif;
+				font-weight: normal;
+				font-style: italic;
+				text-indent: 0;
+				font-size: 9px;
+				line-height: 11px;
+				color: #052C49;
+				margin-top: 28px !important;
+			}
+			.name{
+				font-size: 11px;
+				font-weight: bold;
+				color: $white_border;
+				
+			}			
+}		
+		
+		
+		
