--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -12,3 +12,132 @@
 @import "partials/page";
 @import "partials/form";
 @import "partials/two_col";
+@import "compass/utilities/general/float";
+@import "compass/layout/stretching";
+@import "compass/layout/sticky-footer";
+@import "compass/css3/opacity";
+@import "compass/css3/border-radius";
+
+
+$sidebar-width: 300px;
+$stories-width: 230px;
+
+
+body{
+	height: 100%;
+	@include blueprint(true);
+}
+
+
+#header{
+	position: relative;
+	height: 54px;
+	background-color: yellow;
+	width: 100%;
+}
+
+#pageslide{
+	background: none !important;
+}
+
+#modal{
+	display: none;
+	.background{
+		@include stretch();
+		background-color: black;
+		@include opacity(0.7);
+	}
+	.content{
+		position: relative;
+		width: 100%;
+		height: 100%;
+		z-index: 2;
+	}
+}
+
+#wrapper{
+	position: absolute;
+	width: 100%;
+	background-color: red;
+}
+
+#main{
+	@include stretch(0,$stories-width,0,0);
+	background-color: blue;
+	height:  2000px;
+	margin-left: -$sidebar-width;
+	#content{
+		margin: 100px, 0 ,0, -$sidebar-width;
+		
+		background-color: orange;
+		
+	
+	}
+}
+#sidebar{
+	@include column(6,last);
+	@include float-right;
+	background-color: green;
+	height: 2000px;
+	
+	
+}
+
+#footer{
+	.wrapper{
+		position: relative;
+		width: 100%;
+		text-align: center;
+		button{
+			width: 60px;
+			height: 60px;
+			background-color: yellow;
+			position: relative;
+			margin-top: -60px;
+		}
+	}
+	position: fixed;
+	bottom: 0;
+	height: 280px;
+	margin-bottom: -280px;
+	background-color: yellow;
+	left: 0;
+	right: 0;
+}
+
+.subnav{
+right: $stories-width;
+}
+
+.subnav-fixed {
+position: fixed;
+top: 0;
+left: 0;
+right: $stories-width;
+z-index: 1020;
+background-color: grey;
+@include opacity(0.9);
+border-width: 0 0 1px;
+@include border-radius(0);
+}
+
+#events{
+	width: 100%;
+	height: 300px;
+	background-color: red;
+}
+#locations{
+	width: 100%;
+	height: 300px;
+	background-color: purple;
+}
+#blog{
+	width: 100%;
+	height: 300px;
+	background-color: yellow;
+}
+#people{
+	width: 100%;
+	height: 300px;
+	background-color: white;
+}
