--- a/css/jquery.pageslide.css
+++ b/css/jquery.pageslide.css
@@ -21,10 +21,10 @@
     
 }
 
-#modal { display: none; }
+/*#modal { display: none; }*/
 
-#content {
+/*#content {
     width: 940px;
     padding: 10px;
     margin: 0 auto;
-}
+}*/
