--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -17,11 +17,11 @@
 @import "compass/layout/sticky-footer";
 @import "compass/css3/opacity";
 @import "compass/css3/border-radius";
-
+@import "compass/utilities/general/float";
 
 $sidebar-width: 300px;
 $stories-width: 230px;
-
+$subnav-height: 50px;
 
 body{
 	height: 100%;
@@ -67,7 +67,7 @@ body{
 	height:  2000px;
 	margin-left: -$sidebar-width;
 	#content{
-		margin: 100px, 0 ,0, -$sidebar-width;
+		margin-left: $sidebar-width;
 		
 		background-color: orange;
 		
@@ -107,6 +107,7 @@ body{
 
 .subnav{
 right: $stories-width;
+height: $subnav-height;
 }
 
 .subnav-fixed {
@@ -121,23 +122,111 @@ border-width: 0 0 1px;
 @include border-radius(0);
 }
 
+.buttons_bar{
+	width: 90%;
+	position: absolute;
+	text-align: right;
+	bottom: 0;
+}
+
 #events{
+	overflow: hidden;
 	width: 100%;
 	height: 300px;
 	background-color: red;
+	padding-left: 50px;
+	position: relative;
+	
+
 }
 #locations{
+	overflow: hidden;
+	padding-top: $subnav-height;	
 	width: 100%;
 	height: 300px;
 	background-color: purple;
+	padding-left: 50px;
+	position: relative;
+	
+
 }
 #blog{
+	overflow: hidden;
+	padding-top: $subnav-height;
 	width: 100%;
 	height: 300px;
 	background-color: yellow;
+	padding-left: 50px;
+	position: relative;
+	
+
 }
 #people{
+	overflow: hidden;
+	padding-top: $subnav-height;
 	width: 100%;
 	height: 300px;
 	background-color: white;
+	padding-left: 50px;
+	position: relative;
+	
+
+}
+
+.wrapper{
+	
+	.item{
+		margin: 15px;
+		width: 140px;
+		height: 200px;
+		background-color: lightblue;
+	}
+}
+
+.isotope-item {
+  z-index: 2;
+}
+
+.isotope-hidden.isotope-item {
+  pointer-events: none;
+  z-index: 1;
+}
+
+/**** Isotope CSS3 transitions ****/
+
+.isotope,
+.isotope .isotope-item {
+  -webkit-transition-duration: 0.8s;
+     -moz-transition-duration: 0.8s;
+      -ms-transition-duration: 0.8s;
+       -o-transition-duration: 0.8s;
+          transition-duration: 0.8s;
+}
+
+.isotope {
+  -webkit-transition-property: height, width;
+     -moz-transition-property: height, width;
+      -ms-transition-property: height, width;
+       -o-transition-property: height, width;
+          transition-property: height, width;
+}
+
+.isotope .isotope-item {
+  -webkit-transition-property: -webkit-transform, opacity;
+     -moz-transition-property:    -moz-transform, opacity;
+      -ms-transition-property:     -ms-transform, opacity;
+       -o-transition-property:         top, left, opacity;
+          transition-property:         transform, opacity;
+}
+
+/**** disabling Isotope CSS3 transitions ****/
+
+.isotope.no-transition,
+.isotope.no-transition .isotope-item,
+.isotope .isotope-item.no-transition {
+  -webkit-transition-duration: 0s;
+     -moz-transition-duration: 0s;
+      -ms-transition-duration: 0s;
+       -o-transition-duration: 0s;
+          transition-duration: 0s;
 }
