--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -48,27 +48,60 @@ body.bp{
 		@include container;
 	}
 	
-	.row_eventi{
-//	background-color: cyan;
-	width: 740px;
+	.row_events{
 	margin-top: 15px;
+	@include clearfix;
 	}
-		
-	.top_row_eventi{
-		width: 730px;
-		height: 298px;
-//		margin-top: 50px;
-		overflow: hidden;
-		padding-left: 10px;
-		border-bottom: 1px solid $blu_dark_border;
-	}
-
-			.scheda_evento{
+	
+	.event.single{
+		@include float-left;
+	
+		.date{
+			border-top: 1px solid $blu_light_border;
+			width: 226px;
+			padding-left: 20px;
+			margin-bottom: 30px;
+			float: left;
+			@include background-image(radial-gradient(50% 0, rgba(121,212,216,0.5), rgba(121,212,216,0) 60%));
+				
+					.day{
+						font-family: 'Bemio italic';
+						font-size: 55px;
+						color: $azzurro_text;
+						font-style: italic;
+						line-height: 64px;
+						float: left;
+						margin-right: 10px;
+						}
+					.month{
+						font-family: 'Bemio italic';
+						font-style: italic;
+						font-size: 24px;
+						color: $azzurro_text;
+						text-transform: capitalize;
+						}
+					.place{
+						font-family: 'Bemio italic';
+						font-style: italic;
+						font-size: 18px;
+						color: $white_border;
+						margin-top: -10px;
+						}
+			}
+			
+		.mask{
+			width: 246px;
+			height: 298px;
+			overflow: hidden;
+			
+			border-bottom: 1px solid $blu_dark_border;
+			
+			.card{
 				position: relative;
-				float: left;
+				@include float-left;
 				width: 216px;
 				height: 290px;
-				margin: 10px;
+				margin: 10px 10px 10px 14px;
 				@include border-radius(6px, 6px);
 				@include single-box-shadow(rgba(11,78,107,0.5), 1px, 2px, 10px);
 				border: 2px solid $white_border;
@@ -78,73 +111,30 @@ body.bp{
 						@include border-radius(3px, 3px);
 					}
 					
-			}
-	
-
-			.faccia_scheda_evento{
-						position: absolute;
-						top: -7px;
-						right: -7px;
-						width: 80px;
-						height: 80px;
-						@include border-radius(6px, 6px);
-						@include single-box-shadow(rgba(11,78,107,0.5), 1px, 2px, 10px);
-						border: 2px solid $white_border;
-						
-							img{
-								width: 80px;
-								height: 80px;
-								@include border-radius(4px, 4px);
-							}
+				.avatar{
+							position: absolute;
+							top: -7px;
+							right: -7px;
+							width: 80px;
+							height: 80px;
+							@include border-radius(6px, 6px);
+							@include single-box-shadow(rgba(11,78,107,0.5), 1px, 2px, 10px);
+							border: 2px solid $white_border;
 							
-					}
-			
-	.bottom_row_eventi{
-		width: 740px;
-		height: 70px;
-		@include background-image(radial-gradient(50% 0, rgba(121,212,216,0.5), rgba(121,212,216,0) 60%));
-//		background-color: #66c5db;
-		border-top: 1px solid $blu_light_border;
-	}
-	
-		.data_evento{
-			width: 220px;
-			margin-left: 20px;
-			margin-bottom: 30px;
-			float: left;
-		
-			.giorno{
-				font-family: 'Bemio italic';
-				font-size: 55px;
-				color: $azzurro_text;
-				font-style: italic;
-				line-height: 64px;
-				float: left;
-				margin-right: 10px;
-//				background-color: red;
-			}
-			.mese{
-				font-family: 'Bemio italic';
-				font-style: italic;
-				font-size: 24px;
-				color: $azzurro_text;
-				text-transform: capitalize;
-//				background-color: cyan;
-			}
-			.luogo{
-				font-family: 'Bemio italic';
-				font-style: italic;
-				font-size: 18px;
-				color: $white_border;
-				margin-top: -10px;
-			}
+								img{
+									width: 80px;
+									height: 80px;
+									@include border-radius(4px, 4px);
+								}
+								
+						}
+					
+				}
 		}
-		
-		
-		
-		
+	}	
 		
 .blog_side{
+	margin-top: 100px;
 	width: 291px;
 	background-color: $grigio_bg;
 	padding: 43px 0 18px 39px;
