--- a/css/print.css
+++ b/css/print.css
@@ -1,4 +1,4 @@
-/* line 4, ../sass/print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/manuelacammilleri\/Documents\/gnammo_dev\/sass\/print\.scss}line{font-family:\000034}}
 body.bp {
   line-height: 1.5;
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
@@ -6,11 +6,11 @@ body.bp {
   background: none;
   font-size: 10pt;
 }
-/* line 45, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000345}}
 body.bp .container {
   background: none;
 }
-/* line 47, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000347}}
 body.bp hr {
   background: #cccccc;
   color: #cccccc;
@@ -20,54 +20,54 @@ body.bp hr {
   padding: 0;
   border: none;
 }
-/* line 55, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000355}}
 body.bp hr.space {
   background: white;
   color: white;
 }
-/* line 58, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000358}}
 body.bp h1, body.bp h2, body.bp h3, body.bp h4, body.bp h5, body.bp h6 {
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
-/* line 60, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000360}}
 body.bp code {
   font-size: 0.9em;
   font-family: "andale mono", "lucida console", monospace;
 }
-/* line 65, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000365}}
 body.bp a img {
   border: none;
 }
-/* line 68, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000368}}
 body.bp a:link, body.bp a:visited {
   background: transparent;
   font-weight: 700;
   text-decoration: underline;
 }
-/* line 72, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000372}}
 body.bp p img.top {
   margin-top: 0;
 }
-/* line 74, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000374}}
 body.bp blockquote {
   margin: 1.5em;
   padding: 1em;
   font-style: italic;
   font-size: 0.9em;
 }
-/* line 79, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000379}}
 body.bp .small {
   font-size: 0.9em;
 }
-/* line 81, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000381}}
 body.bp .large {
   font-size: 1.1em;
 }
-/* line 83, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000383}}
 body.bp .quiet {
   color: #999999;
 }
-/* line 85, ../../../../../Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/compass-0\.12\.1\/frameworks\/blueprint\/stylesheets\/blueprint\/_print\.scss}line{font-family:\0000385}}
 body.bp .hide {
   display: none;
 }
